Avoid Polyfill supply chain attack ----------------------------------
The new owner of the polyfill.io domain is injecting JavaScript code to
serve uninteded content (commercials) to end users[1]. It could also be used
for other malicious campaigns, to inject targeted attack code.

To reduce the risk we're changing the polyfill to load from a "good copy"
made by CloudFlare[2] back in February 2024.

TODO: Reconsider the use of the polyfill library, is it still needed?

References:
[1] https://sansec.io/research/polyfill-supply-chain-attack
[2] https://blog.cloudflare.com/automatically-replacing-polyfill-io-links-with-cloudflares-mirror-for-a-safer-internet

--- a/demo/www/index.html
+++ b/demo/www/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.9.0/css/ol.css" type="text/css">
     <script src="https://unpkg.com/elm-pep"></script>
-    <script src="https://cdn.polyfill.io/v3/polyfill.min.js?features=fetch,requestAnimationFrame,Element.prototype.classList,URL,TextDecoder,Number.isInteger">
+    <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=fetch,requestAnimationFrame,Element.prototype.classList,URL,TextDecoder,Number.isInteger">
       </script>
     <script src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.9.0/build/ol.js">
       </script>
